syntax = "proto3";
package protobuf;

message Request {
    string id = 1;
    string endpoint = 2;
    repeated string headers = 3;
    string response_queue = 4;
    string body = 5;
}